hphp/hack/test/ifc/check/switch.php.exp
=== IFC analysis results for switch.php
File "switch.php", line 57, characters 3-13:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "switch.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "switch.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "switch.php", line 51, characters 7-17:
  Another program point contributing to the illegal flow
File "switch.php", line 68, characters 7-16:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "switch.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "switch.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "switch.php", line 63, characters 11-19:
  Another program point contributing to the illegal flow
File "switch.php", line 27, characters 7-17:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "switch.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "switch.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "switch.php", line 26, characters 10-14:
  Another program point contributing to the illegal flow
File "switch.php", line 41, characters 7-17:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "switch.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "switch.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "switch.php", line 38, characters 7-17:
  Another program point contributing to the illegal flow
File "switch.php", line 79, characters 3-12:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "switch.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "switch.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "switch.php", line 73, characters 11-15:
  Another program point contributing to the illegal flow
File "switch.php", line 94, characters 7-16:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "switch.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "switch.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "switch.php", line 87, characters 10-14:
  Another program point contributing to the illegal flow
File "switch.php", line 91, characters 7-16:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "switch.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "switch.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "switch.php", line 87, characters 10-14:
  Another program point contributing to the illegal flow
File "switch.php", line 88, characters 7-16:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "switch.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "switch.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "switch.php", line 87, characters 10-14:
  Another program point contributing to the illegal flow
File "switch.php", line 104, characters 10-13:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "switch.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "switch.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "switch.php", line 99, characters 3-49:
  Another program point contributing to the illegal flow
  File "switch.php", line 100, characters 5-14:
  Another program point contributing to the illegal flow
  File "switch.php", line 103, characters 11-15:
  Another program point contributing to the illegal flow
File "switch.php", line 16, characters 7-16:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "switch.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "switch.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "switch.php", line 13, characters 11-15:
  Another program point contributing to the illegal flow
